# langchain

./: .env  function_utils.py  functions.py  functions_korean.py  langchain_english.py  langchain_korean.py  langchain_test_bkp.py  main.py  pyproject.toml
tools/F_predict/: F_main.py  F_model.py  F_predict.py  F_preprocess.py  F_utils.py  sample.xlsx  기능-제품군 매칭.xlsx  제품군 설명.xlsx
tools/F_predict/parameters/: scaler.sav
tools/mixtox_predict/: README.md  mix_GCN_models.py  mix_main.py  mix_model.py  mix_preprocess.py  requirements.txt
tools/mixtox_predict/saved_models/AR/Classification/: AR_Classification_weights.pth  scaler_A.sav  scaler_B.sav
tools/mixtox_predict/saved_models/AR/MDR/: AR_MDR_weights.pth  scaler_A.sav  scaler_B.sav
tools/mixtox_predict/saved_models/AR/Regression/: AR_Regression_weights.pth  scaler_A.sav  scaler_B.sav
tools/mixtox_predict/saved_models/EB/MDR/: EB_MDR_weights.pth  (+2 more)
tools/skin_predict/: skin_data.py  skin_main.py  skin_model.py  skin_model_utils.py  skin_mol_to_graph.py  skin_predict.py  skin_utils.py
tools/skin_predict/domain/: KE1_train_lf.xlsx  KE1_train_mf.xlsx  KE2_train_lf.xlsx  KE2_train_mf.xlsx  KE3_train_lf.xlsx  KE3_train_mf.xlsx  KE4_train_lf.xlsx  KE4_train_mf.xlsx
tools/skin_predict/examples/: KE1_test_examples.xlsx  KE2_test_examples.xlsx  KE3_test_examples.xlsx  test.xlsx
tools/skin_predict/model/: KE1.pth  KE1_model.config  KE2.pth  KE2_model.config  KE3.pth  KE3_model.config  KE4.pth  KE4_model.config
tools/skin_predict/output/: test_1_output.xlsx  test_2_output.xlsx  test_3_output.xlsx  test_All_output.xlsx
(+47 files in other folders)
